--- a/src/main/kotlin/org/wfanet/measurement/reporting/service/internal/testing/v2/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/service/internal/testing/v2/BUILD.bazel
@@ -13,6 +13,7 @@ kt_jvm_library(
         ],
     ),
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/reporting/service/internal:errors",
         "//src/main/proto/wfa/measurement/internal/reporting/v2:measurement_consumers_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/internal/reporting/v2:measurements_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/internal/reporting/v2:metric_calculation_specs_service_kt_jvm_grpc_proto",
