--- a/src/main/k8s/testing/secretfiles/BUILD.bazel
+++ b/src/main/k8s/testing/secretfiles/BUILD.bazel
@@ -80,6 +80,18 @@ filegroup(
     ],
 )
 
+filegroup(
+    name = "edp_aggregator_certs",
+    srcs = [
+        "edp1_root.pem",
+        "edp1_tls.key",
+        "edp1_tls.pem",
+        "kingdom_root.pem",
+        "kingdom_tls.key",
+        "kingdom_tls.pem",
+    ],
+)
+
 genrule(
     name = "gen_trusted_certs",
     srcs = [":root_certs"],
