--- a/src/main/proto/wfa/measurement/securecomputation/storage/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/securecomputation/storage/BUILD.bazel
@@ -9,8 +9,8 @@ package(default_visibility = ["//visibility:public"])
 IMPORT_PREFIX = "/src/main/proto"
 
 proto_library(
-    name = "resource_batch_proto",
-    srcs = ["resource_batch.proto"],
+    name = "requisition_batch_proto",
+    srcs = ["requisition_batch.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
         "@com_google_protobuf//:any_proto",
@@ -18,6 +18,6 @@ proto_library(
 )
 
 kt_jvm_proto_library(
-    name = "resource_batch_kt_jvm_proto",
-    deps = [":resource_batch_proto"],
+    name = "requisition_batch_kt_jvm_proto",
+    deps = [":requisition_batch_proto"],
 )
