--- a/src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/spanner/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/spanner/BUILD.bazel
@@ -4,6 +4,7 @@ package(
     default_visibility = [
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/service:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/spanner:__pkg__",
+        "//src/test/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:__pkg__",
     ],
 )
 
