--- a/src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/service/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/service/BUILD.bazel
@@ -5,11 +5,15 @@ kt_jvm_library(
     srcs = ["DataServices.kt"],
     visibility = [
         "//src/main/kotlin/org/wfanet/measurement/integration/deploy/gcloud:__subpackages__",
+        "//src/main/kotlin/org/wfanet/measurement/integration/deploy/gcloud/reporting:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/server:__subpackages__",
+        "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/postgres/server:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/server:__subpackages__",
+        "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres/server:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/integration:__subpackages__",
     ],
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/common/server:internal_reporting_server",
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/gcloud/spanner:basic_reports_service",
         "//src/main/kotlin/org/wfanet/measurement/reporting/deploy/v2/postgres:services",
         "//src/main/proto/wfa/measurement/internal/reporting/v2:measurement_consumers_service_kt_jvm_grpc_proto",
