--- a/src/main/kotlin/org/wfanet/measurement/loadtest/common/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/loadtest/common/BUILD.bazel
@@ -6,6 +6,7 @@ package(
         "//src/main/kotlin/org/wfanet/measurement/integration/common/reporting:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/loadtest:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/loadtest:__subpackages__",
+        "//src/test/kotlin/org/wfanet/measurement/securecomputation/teeapps/resultsfulfillment:__subpackages__",
     ],
 )
 
