--- a/src/main/kotlin/org/wfanet/measurement/loadtest/config/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/loadtest/config/BUILD.bazel
@@ -7,6 +7,7 @@ package(
         "//src/main/kotlin/org/wfanet/measurement/loadtest:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/integration:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/loadtest:__subpackages__",
+        "//src/test/kotlin/org/wfanet/measurement/securecomputation/teeapps/resultsfulfillment:__subpackages__",
     ],
 )
 
