--- a/src/test/kotlin/org/wfanet/measurement/securecomputation/teeapps/resultsfulfillment/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/securecomputation/teeapps/resultsfulfillment/BUILD.bazel
@@ -19,9 +19,14 @@ kt_jvm_test(
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha/testing",
         "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/eventfiltration:event_filters",
-        "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/privacybudgetmanagement:privacy_budget_manager",
-        "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/privacybudgetmanagement/testing",
         "//src/main/kotlin/org/wfanet/measurement/integration/common:configs",
+        "//src/main/kotlin/org/wfanet/measurement/integration/common:synthetic_generation_specs",
+        "//src/main/kotlin/org/wfanet/measurement/loadtest/common:sample_vids",
+        "//src/main/kotlin/org/wfanet/measurement/loadtest/config:event_group_metadata",
+        "//src/main/kotlin/org/wfanet/measurement/loadtest/config:test_identifiers",
+        "//src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider:in_memory_event_query",
+        "//src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider:measurement_results",
+        "//src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider:synthetic_generator_event_query",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:google_pub_sub_work_items_service",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/teeapps/resultsfulfillment:results_fulfiller_app",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/teeapps/vidlabeling:vid_labeler_app",
