--- a/src/main/docker/BUILD.bazel
+++ b/src/main/docker/BUILD.bazel
@@ -123,15 +123,15 @@ container_push_all(
     ],
 )
 
-container_push_all(
-    name = "push_all_edp_aggregator_images",
-    images = {"{registry}/{name}:{tag}".format(
-        name = image_spec.repository,
-        registry = IMAGE_REPOSITORY_SETTINGS.container_registry,
-        tag = IMAGE_REPOSITORY_SETTINGS.image_tag,
-    ): image_spec.image for image_spec in ALL_EDP_AGGREGATOR_IMAGES},
-    tags = [
-        "manual",
-        "no-remote",
-    ],
-)
+#container_push_all(
+#    name = "push_all_edp_aggregator_images",
+#    images = {"{registry}/{name}:{tag}".format(
+#        name = image_spec.repository,
+#        registry = IMAGE_REPOSITORY_SETTINGS.container_registry,
+#        tag = IMAGE_REPOSITORY_SETTINGS.image_tag,
+#    ): image_spec.image for image_spec in ALL_EDP_AGGREGATOR_IMAGES},
+#    tags = [
+#        "manual",
+#        "no-remote",
+#    ],
+#)
