--- a/src/main/docker/BUILD.bazel
+++ b/src/main/docker/BUILD.bazel
@@ -4,12 +4,11 @@ load(
     "container_push_all",
 )
 load("//build:variables.bzl", "IMAGE_REPOSITORY_SETTINGS")
-load(":images.bzl", "ALL_EDP_AGGREGATOR_IMAGES", "ALL_EKS_IMAGES", "ALL_GKE_IMAGES", "ALL_IMAGES", "ALL_LOCAL_IMAGES", "ALL_REPORTING_GKE_IMAGES")
+load(":images.bzl", "ALL_EKS_IMAGES", "ALL_GKE_IMAGES", "ALL_IMAGES", "ALL_LOCAL_IMAGES", "ALL_REPORTING_GKE_IMAGES")
 
 package(
     default_testonly = True,  #TODO: delete when InMemoryKeyStore and FakeHybridCipher are not used.
     default_visibility = [
-        "//src/test/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher:__pkg__",
         "//src/test/kotlin/org/wfanet/measurement/integration/k8s:__pkg__",
         "//src/test/kotlin/org/wfanet/panelmatch/integration/k8s:__pkg__",
     ],
@@ -122,16 +121,3 @@ container_push_all(
         "no-remote",
     ],
 )
-
-#container_push_all(
-#    name = "push_all_edp_aggregator_images",
-#    images = {"{registry}/{name}:{tag}".format(
-#        name = image_spec.repository,
-#        registry = IMAGE_REPOSITORY_SETTINGS.container_registry,
-#        tag = IMAGE_REPOSITORY_SETTINGS.image_tag,
-#    ): image_spec.image for image_spec in ALL_EDP_AGGREGATOR_IMAGES},
-#    tags = [
-#        "manual",
-#        "no-remote",
-#    ],
-#)
