--- a/src/main/kotlin/org/wfanet/measurement/reporting/service/internal/testing/v2/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/service/internal/testing/v2/BUILD.bazel
@@ -9,6 +9,7 @@ kt_jvm_library(
         include = ["*.kt"],
         exclude = [
             "BasicReportsServiceTest.kt",
+            "ImpressionQualificationFiltersServiceTest.kt",
             "MeasurementConsumersServiceTest.kt",
         ],
     ),
@@ -70,5 +71,22 @@ kt_jvm_library(
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/identity",
+    ],
+)
+
+kt_jvm_library(
+    name = "impression_qualification_filters_service_test",
+    testonly = True,
+    srcs = ["ImpressionQualificationFiltersServiceTest.kt"],
+    deps = [
+        "//src/main/kotlin/org/wfanet/measurement/reporting/service/internal:errors",
+        "//src/main/proto/wfa/measurement/internal/reporting/v2:impression_qualification_filters_service_kt_jvm_grpc_proto",
+        "@wfa_common_jvm//imports/java/com/google/common/truth",
+        "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
+        "@wfa_common_jvm//imports/java/com/google/protobuf",
+        "@wfa_common_jvm//imports/java/org/junit",
+        "@wfa_common_jvm//imports/kotlin/kotlin/test",
+        "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
     ],
 )
