--- a/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
@@ -9,6 +9,8 @@ load("//src/main/proto/wfa/measurement/internal/common:macros.bzl", "IMPORT_PREF
 
 package(default_visibility = ["//:__subpackages__"])
 
+exports_files(["impression_qualification_filters_config.textproto"])
+
 proto_and_kt_jvm_proto_library(
     name = "measurement_consumer",
 )
@@ -218,6 +220,7 @@ MESSAGE_LIBS = [
     "basic_report",
     "event_filter",
     "event_template_field",
+    "impression_qualification_filter",
     "impression_qualification_filter_spec",
     "metric_frequency_spec",
     "result_group",
@@ -267,10 +270,43 @@ proto_library(
 )
 
 proto_library(
+    name = "impression_qualification_filter_proto",
+    srcs = ["impression_qualification_filter.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [":impression_qualification_filter_spec_proto"],
+)
+
+proto_library(
     name = "impression_qualification_filter_spec_proto",
     srcs = ["impression_qualification_filter_spec.proto"],
     strip_import_prefix = IMPORT_PREFIX,
     deps = [":event_filter_proto"],
+)
+
+proto_library(
+    name = "impression_qualification_filters_config_proto",
+    srcs = ["impression_qualification_filters_config.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [":impression_qualification_filter_proto"],
+)
+
+kt_jvm_proto_library(
+    name = "impression_qualification_filters_config_kt_jvm_proto",
+    deps = [":impression_qualification_filters_config_proto"],
+)
+
+proto_library(
+    name = "impression_qualification_filters_service_proto",
+    srcs = ["impression_qualification_filters_service.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        ":impression_qualification_filter_proto",
+    ],
+)
+
+kt_jvm_grpc_proto_library(
+    name = "impression_qualification_filters_service_kt_jvm_grpc_proto",
+    deps = [":impression_qualification_filters_service_proto"],
 )
 
 proto_library(
@@ -347,7 +383,9 @@ proto_descriptor_set(
         ":basic_report_result_details_proto",
         ":event_filter_proto",
         ":event_template_field_proto",
+        ":impression_qualification_filter_proto",
         ":impression_qualification_filter_spec_proto",
+        ":impression_qualification_filters_config_proto",
         ":metric_frequency_spec_proto",
         ":reporting_impression_qualification_filter_proto",
         ":reporting_interval_proto",
