--- a/src/main/kotlin/org/wfanet/measurement/reporting/service/api/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/service/api/BUILD.bazel
@@ -32,3 +32,14 @@ kt_jvm_library(
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
     ],
 )
+
+kt_jvm_library(
+    name = "errors",
+    srcs = ["Errors.kt"],
+    deps = [
+        "//src/main/kotlin/org/wfanet/measurement/common/grpc:error_info",
+        "//src/main/kotlin/org/wfanet/measurement/reporting/service/internal:errors",
+        "//src/main/proto/google/rpc:error_details_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/io/grpc:api",
+    ],
+)
