--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/teeapps/resultsfulfillment/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/teeapps/resultsfulfillment/BUILD.bazel
@@ -20,6 +20,8 @@ kt_jvm_library(
         "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/privacybudgetmanagement/api/v2alpha:privacy_query_mapper",
         "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/shareshuffle/v2alpha:shareshuffle",
         "//src/main/kotlin/org/wfanet/measurement/securecomputation/teesdk:base_tee_application",
+        "//src/main/proto/halo_cmm/uk/pilot:common_template_kt_jvm_proto",
+        "//src/main/proto/halo_cmm/uk/pilot:event_kt_jvm_proto",
         "//src/main/proto/wfa/any_sketch:frequency_vector_kt_jvm_proto",
         "//src/main/proto/wfa/any_sketch:sketch_kt_jvm_proto",
         "//src/main/proto/wfa/frequency_count:secret_share_kt_jvm_proto",
