--- a/src/main/proto/halo_cmm/uk/pilot/BUILD.bazel
+++ b/src/main/proto/halo_cmm/uk/pilot/BUILD.bazel
@@ -2,6 +2,7 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_proto_library")
 
 package(default_visibility = [
     "//src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider:__pkg__",
+    "//src/main/kotlin/org/wfanet/measurement/securecomputation/teeapps/resultsfulfillment:__pkg__",
     "//src/test/kotlin/org/wfanet/measurement/loadtest/dataprovider:__pkg__",
 ])
 
@@ -23,6 +24,16 @@ alias(
 kt_jvm_proto_library(
     name = "video_template_kt_jvm_proto",
     deps = [":video_template_proto"],
+)
+
+alias(
+    name = "common_template_proto",
+    actual = "@uk_pilot_event_templates//src/main/proto/halo_cmm/uk/pilot:common_template_proto",
+)
+
+kt_jvm_proto_library(
+    name = "common_template_kt_jvm_proto",
+    deps = [":common_template_proto"],
 )
 
 alias(
