--- a/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
@@ -1,10 +1,12 @@
 load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
+load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
 load(
     "@wfa_rules_kotlin_jvm//kotlin:defs.bzl",
     "kt_jvm_grpc_proto_library",
     "kt_jvm_proto_library",
 )
 load("//build:defs.bzl", "proto_lib_prefix")
+load("//build/grpc_gateway:defs.bzl", "go_grpc_gateway_proto_library")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -420,3 +422,29 @@ proto_library(
     )
     for label_str in SERVICE_LIBS
 ]
+
+GO_IMPORT_PATH = "github.com/world-federation-of-advertisers/cross-media-measurement/reporting/apiv2alpha/reportingpb"
+
+GO_DEPS = [
+    "@org_golang_google_genproto//googleapis/type/date",
+    "@org_golang_google_genproto//googleapis/type/datetime",
+    "@org_golang_google_genproto//googleapis/type/dayofweek",
+    "@org_golang_google_genproto//googleapis/type/interval",
+    "@org_golang_google_genproto_googleapis_api//annotations",
+    "@com_google_cloud_go_longrunning//autogen/longrunningpb",
+]
+
+go_proto_library(
+    name = "reportingpb_go_proto",
+    importpath = GO_IMPORT_PATH,
+    protos = MESSAGE_LIBS,
+    deps = GO_DEPS,
+)
+
+go_grpc_gateway_proto_library(
+    name = "reportingpb_go_grpc_proto",
+    embed = [":reportingpb_go_proto"],
+    importpath = GO_IMPORT_PATH,
+    protos = SERVICE_LIBS,
+    deps = GO_DEPS,
+)
