--- a/src/main/k8s/testing/secretfiles/BUILD.bazel
+++ b/src/main/k8s/testing/secretfiles/BUILD.bazel
@@ -86,6 +86,12 @@ filegroup(
         "edp1_root.pem",
         "edp1_tls.key",
         "edp1_tls.pem",
+    ],
+)
+
+filegroup(
+    name = "kingdom_certs",
+    srcs = [
         "kingdom_root.pem",
         "kingdom_tls.key",
         "kingdom_tls.pem",
