--- a/src/test/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher/BUILD.bazel
@@ -1,13 +1,51 @@
-load("@rules_java//java:defs.bzl", "java_test")
-load(
-    "@wfa_common_jvm//build/rules_oci:defs.bzl",
-    "container_push",
-)
-load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
-load("//build:variables.bzl", "IMAGE_REPOSITORY_SETTINGS")
+load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library", "kt_jvm_test")
 
 package(
     default_testonly = True,
+)
+
+java_binary(
+    name = "RequisitionFetcherFunction",
+    main_class = "org.wfanet.measurement.edpaggregator.requisitionfetcher.RequisitionFetcherFunction",
+    runtime_deps = ["//src/main/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher:requisition_fetcher_function"],
+)
+
+java_binary(
+    name = "InvokeRequisitionFetcherFunction",
+    args = [
+        "--target org.wfanet.measurement.edpaggregator.requisitionfetcher.RequisitionFetcherFunction",
+    ],
+    main_class = "com.google.cloud.functions.invoker.runner.Invoker",
+    runtime_deps = [
+        "//imports/java/com/google/cloud/functions/invoker:java_function_invoker",
+        "//src/main/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher:requisition_fetcher_function",
+    ],
+)
+
+kt_jvm_library(
+    name = "requisition_fetcher_function_test",
+    srcs = ["RequisitionFetcherFunctionTest.kt"],
+    data = [
+        ":InvokeRequisitionFetcherFunction",
+        "//src/main/k8s/testing/secretfiles:edp_aggregator_certs",
+        "//src/main/k8s/testing/secretfiles:kingdom_certs",
+    ],
+    deps = [
+        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha/testing",
+        "//src/main/kotlin/org/wfanet/measurement/common/k8s/testing:processes",
+        "//src/main/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher:requisition_fetcher_function",
+        "//src/main/proto/wfa/measurement/api/v2alpha:requisitions_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/api/v2alpha/event_templates/testing:test_event_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/com/google/cloud/storage/contrib/nio",
+        "@wfa_common_jvm//imports/java/com/google/common/truth",
+        "@wfa_common_jvm//imports/java/org/junit",
+        "@wfa_common_jvm//imports/java/org/testcontainers/containers:pubsub",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/testing",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/testing",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/gcs",
+        "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/duchy",
+        "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/measurementconsumer",
+    ],
 )
 
 kt_jvm_test(
@@ -18,6 +56,7 @@ kt_jvm_test(
         "//src/main/k8s/testing/secretfiles:all_der_files",
         "//src/main/k8s/testing/secretfiles:all_tink_keysets",
         "//src/main/k8s/testing/secretfiles:edp_trusted_certs.pem",
+        "//src/main/k8s/testing/secretfiles:kingdom_certs",
     ],
     test_class = "org.wfanet.measurement.edpaggregator.requisitionfetcher.RequisitionFetcherTest",
     deps = [
@@ -37,45 +76,16 @@ kt_jvm_test(
 )
 
 kt_jvm_test(
-    name = "requisition_fetcher_function_test",
-    srcs = ["RequisitionFetcherFunctionTest.kt"],
-    data = [
-        "//src/main/k8s/testing/secretfiles:edp_aggregator_certs",
-        "//src/main/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher:InvokeRequisitionFetcherFunction",
-    ],
-    test_class = "org.wfanet.measurement.edpaggregator.requisitionfetcher.RequisitionFetcherFunctionTest",
-    deps = [
-        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha/testing",
-        "//src/main/kotlin/org/wfanet/measurement/common/k8s/testing:processes",
-        "//src/main/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher:requisition_fetcher_function",
-        "//src/main/proto/wfa/measurement/api/v2alpha:requisitions_service_kt_jvm_grpc_proto",
-        "//src/main/proto/wfa/measurement/api/v2alpha/event_templates/testing:test_event_kt_jvm_proto",
-        "@wfa_common_jvm//imports/java/com/google/cloud/storage/contrib/nio",
-        "@wfa_common_jvm//imports/java/com/google/common/truth",
-        "@wfa_common_jvm//imports/java/org/junit",
-        "@wfa_common_jvm//imports/java/org/testcontainers/containers:pubsub",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/testing",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/testing",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/gcs",
-        "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/duchy",
-        "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/measurementconsumer",
-    ],
-)
-
-java_test(
     name = "RequisitionFetcherFunctionTest",
-    size = "enormous",
-    timeout = "long",
-    data = ["//src/main/kotlin/org/wfanet/measurement/edpaggregator/requisitionfetcher:InvokeRequisitionFetcherFunction_deploy.jar"],
-    env_inherit = [
-        "DOCKER_HOST",
-        "KUBECONFIG",
+    size = "small",
+    timeout = "short",
+    data = [
+        ":InvokeRequisitionFetcherFunction",
+        "//src/main/k8s/testing/secretfiles:edp_aggregator_certs",
+        "//src/main/k8s/testing/secretfiles:kingdom_certs",
     ],
     tags = [
-        "cpu:8",
-        "excusive",
-        "latest",
-        "manual",
+        "cpu:2",
         "no-remote-exec",
     ],
     test_class = "org.wfanet.measurement.edpaggregator.requisitionfetcher.RequisitionFetcherFunctionTest",
