Add message mapper.

--- a/src/main/proto/wfa/measurement/securecomputation/teeapps/v1alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/securecomputation/teeapps/v1alpha/BUILD.bazel
@@ -19,6 +19,7 @@ proto_library(
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
         "@com_google_protobuf//:any_proto",
+        "@com_google_protobuf//:descriptor_proto",
     ],
 )
 
