--- a/src/main/proto/wfa/measurement/config/reporting/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/config/reporting/BUILD.bazel
@@ -5,6 +5,8 @@ package(default_visibility = ["//visibility:public"])
 
 IMPORT_PREFIX = "/src/main/proto"
 
+exports_files(["impression_qualification_filter_config.textproto"])
+
 proto_library(
     name = "encryption_key_pair_config_proto",
     srcs = ["encryption_key_pair_config.proto"],
@@ -37,4 +39,15 @@ proto_library(
 kt_jvm_proto_library(
     name = "metric_spec_config_kt_jvm_proto",
     deps = [":metric_spec_config_proto"],
+)
+
+proto_library(
+    name = "impression_qualification_filter_config_proto",
+    srcs = ["impression_qualification_filter_config.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+)
+
+kt_jvm_proto_library(
+    name = "impression_qualification_filter_config_kt_jvm_proto",
+    deps = [":impression_qualification_filter_config_proto"],
 )
