--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -228,7 +228,8 @@ maven.install(
         "com.google.cloud:google-cloud-security-private-ca",
         # TODO(googleapis/java-cloud-bom#5279): Remove when managed by BOM.
         "com.google.apis:google-api-services-storage:v1-rev20240706-2.0.0",
-
+        "com.google.cloud.functions.invoker:java-function-invoker:1.4.0",
+        
         # AWS
         "software.amazon.awssdk:acmpca",
 
