--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/teeapps/utils/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/teeapps/utils/BUILD.bazel
@@ -12,5 +12,6 @@ kt_jvm_library(
     deps = [
         "//src/main/proto/wfa/measurement/api/v2alpha:event_annotations_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
+        "@wfa_common_jvm//imports/java/com/google/protobuf/util",
     ],
 )
