--- a/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
@@ -107,6 +107,7 @@ proto_library(
     strip_import_prefix = IMPORT_PREFIX,
     deps = [
         ":metric_proto",
+        "@com_google_protobuf//:empty_proto",
     ],
 )
 
