--- a/src/test/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher/testing/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher/testing/BUILD.bazel
@@ -6,13 +6,15 @@ package(
 )
 
 kt_jvm_test(
-    name = "DataWatcherTest",
-    srcs = ["DataWatcherTest.kt"],
-    test_class = "org.wfanet.measurement.securecomputation.datawatcher.DataWatcherTest",
+    name = "TestDataWatcherFunctionTest",
+    srcs = ["TestDataWatcherFunctionTest.kt"],
+    test_class = "org.wfanet.measurement.securecomputation.deploy.gcloud.datawatcher.testing.TestDataWatcherFunctionTest",
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/securecomputation/datawatcher:data_watcher",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher:data_watcher",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/deploy/gcloud/datawatcher/testing:test_data_watcher_function",
         "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha:work_item_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/securecomputation/datawatcher/v1alpha:data_watcher_config_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/com/google/cloud/storage/contrib/nio",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/kotlin/kotlin/test",
         "@wfa_common_jvm//imports/kotlin/org/mockito/kotlin",
