feat: Accept RFC 9068 OAuth tokens as Reporting API credentials

--- a/src/test/kotlin/org/wfanet/measurement/access/client/v1alpha/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/access/client/v1alpha/BUILD.bazel
@@ -7,6 +7,7 @@ kt_jvm_test(
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/access/client/v1alpha:principal_auth_interceptor",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
+        "@wfa_common_jvm//imports/java/com/google/protobuf/util",
         "@wfa_common_jvm//imports/java/org/junit",
         "@wfa_common_jvm//imports/kotlin/io/grpc/health/v1:health_kt_jvm_grpc_proto",
         "@wfa_common_jvm//imports/kotlin/kotlin/test",
