--- a/src/main/kotlin/org/wfanet/measurement/reporting/service/internal/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/service/internal/BUILD.bazel
@@ -5,6 +5,7 @@ package(default_visibility = [
     "//src/main/kotlin/org/wfanet/measurement/reporting/service/api:__subpackages__",
     "//src/main/kotlin/org/wfanet/measurement/reporting/service/internal/testing/v2:__subpackages__",
     "//src/test/kotlin/org/wfanet/measurement/reporting/deploy/v2:__subpackages__",
+    "//src/test/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:__subpackages__",
 ])
 
 kt_jvm_library(
